Action file updated

--- a/.github/workflows/spring-boot-build.yml
+++ b/.github/workflows/spring-boot-build.yml
@@ -1,4 +1,4 @@
-name: Build Spring Boot Application
+name: Build and Deploy Spring Boot Application
 
 on:
   push:
@@ -36,3 +36,58 @@ jobs:
     # Run Maven build
     - name: Build with Maven
       run: mvn clean install
+
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run Unit Tests
+      run: mvn test
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    needs: unit-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run Integration Tests
+      run: mvn verify -Pintegration-tests
+
+  system-tests:
+    runs-on: ubuntu-latest
+    needs: integration-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run System Tests
+      run: mvn verify -Psystem-tests
+
+  acceptance-tests:
+    runs-on: ubuntu-latest
+    needs: system-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run Acceptance Tests
+      run: mvn verify -Pacceptance-tests
+
+  deployment:
+    runs-on: ubuntu-latest
+    needs: acceptance-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Deploy Application
+      run: ./deploy.sh
