--- a/.github/workflows/spring-boot-auto.yml
+++ b/.github/workflows/spring-boot-auto.yml
@@ -1,9 +1,9 @@
-name: Build Spring Boot Application
+name: Build and Deploy Machine Learning Project
 
 on:
-  push: # Triggers the workflow on any commit
+  push:
     branches:
-      - '**' # Matches all branches (or specify specific branches like 'main' or 'develop')
+      - '**'
 
 jobs:
   build:
@@ -29,3 +29,58 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean install
+
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run Unit Tests
+      run: mvn test
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    needs: unit-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run Integration Tests
+      run: mvn verify -Pintegration-tests
+
+  system-tests:
+    runs-on: ubuntu-latest
+    needs: integration-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run System Tests
+      run: mvn verify -Psystem-tests
+
+  acceptance-tests:
+    runs-on: ubuntu-latest
+    needs: system-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Run Acceptance Tests
+      run: mvn verify -Pacceptance-tests
+
+  deployment:
+    runs-on: ubuntu-latest
+    needs: acceptance-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Deploy Application
+      run: ./deploy.sh
