--- a/.github/workflows/spring-boot-auto.yml
+++ b/.github/workflows/spring-boot-auto.yml
@@ -6,6 +6,17 @@ on:
       - '**'
 
 jobs:
+  pre-build:
+    runs-on: ubuntu-latest
+    needs: acceptance-tests
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Deploy Application
+      run: echo "pre build stage"
+
   build:
     runs-on: ubuntu-latest
 
@@ -74,7 +85,7 @@ jobs:
     - name: Run Acceptance Tests
       run: mvn verify -Pacceptance-tests
 
-  deployment:
+  staging-deployment:
     runs-on: ubuntu-latest
     needs: acceptance-tests
 
@@ -82,5 +93,27 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Deploy Application
-      run: echo "Deploying Application"
+    - name: Deploy to Staging
+      run: echo "Deploying to Staging"
+
+  staging-approval:
+    runs-on: ubuntu-latest
+    needs: staging-deployment
+    if: github.event_name == 'workflow_dispatch'
+
+    steps:
+    - name: Await manual approval
+      uses: hmarr/auto-approve-action@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  production-deployment:
+    runs-on: ubuntu-latest
+    needs: staging-approval
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Deploy to Production
+      run: echo "Deploying to Production"
