--- a/.github/workflows/spring-boot-auto.yml
+++ b/.github/workflows/spring-boot-auto.yml
@@ -18,6 +18,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: pre-build
 
     steps:
     - name: Checkout repository
@@ -106,9 +107,20 @@ jobs:
     - name: Packaging-artifacts
       run: echo "Packaging artifacts before Deploying to QA"
 
+  Packaging-artifacts:
+    runs-on: ubuntu-latest
+    needs: Packaging-artifacts
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Packaging-artifacts
+      run: echo "storing artifacts for deployment"
+
   QualityAssessment-deployment:
     runs-on: ubuntu-latest
-    needs: acceptance-tests
+    needs: Packaging-artifacts
 
     steps:
     - name: Checkout repository
