Action file updated

--- a/.github/workflows/spring-boot-auto.yml
+++ b/.github/workflows/spring-boot-auto.yml
@@ -76,7 +76,7 @@ jobs:
 
   system-tests:
     runs-on: ubuntu-latest
-    needs: integration-tests
+    needs: QualityAssessment-deployment
 
     steps:
     - name: Checkout repository
@@ -120,7 +120,7 @@ jobs:
 
   QualityAssessment-deployment:
     runs-on: ubuntu-latest
-    needs: Packaging-artifacts
+    needs: integration-tests
 
     steps:
     - name: Checkout repository
