--- a/.github/workflows/spring-boot-auto.yml
+++ b/.github/workflows/spring-boot-auto.yml
@@ -98,7 +98,7 @@ jobs:
 
   Packaging-artifacts:
     runs-on: ubuntu-latest
-    needs: acceptance-tests
+    needs: integration-tests
 
     steps:
     - name: Checkout repository
@@ -120,7 +120,7 @@ jobs:
 
   QualityAssessment-deployment:
     runs-on: ubuntu-latest
-    needs: integration-tests
+    needs: Packaging-artifacts
 
     steps:
     - name: Checkout repository
