--- a/.github/workflows/spring-boot-auto.yml
+++ b/.github/workflows/spring-boot-auto.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   pre-build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Checkout repository
@@ -17,7 +17,7 @@ jobs:
       run: echo "pre build stage"
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: pre-build
 
     steps:
@@ -42,7 +42,7 @@ jobs:
       run: mvn clean install
 
   model-validation:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: unit-tests
 
     steps:
@@ -53,7 +53,7 @@ jobs:
       run: echo "Validating model after unit tests"
 
   unit-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: build
 
     steps:
@@ -64,7 +64,7 @@ jobs:
       run: mvn test
 
   integration-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: unit-tests
 
     steps:
@@ -75,7 +75,7 @@ jobs:
       run: mvn verify -Pintegration-tests
 
   system-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: QualityAssessment-deployment
 
     steps:
@@ -86,7 +86,7 @@ jobs:
       run: mvn verify -Psystem-tests
 
   acceptance-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: system-tests
 
     steps:
@@ -97,7 +97,7 @@ jobs:
       run: mvn verify -Pacceptance-tests
 
   Packaging-artifacts:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: integration-tests
 
     steps:
@@ -108,7 +108,7 @@ jobs:
       run: echo "Packaging artifacts before Deploying to QA"
 
   Upload-artifact-nexus:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: Packaging-artifacts
 
     steps:
@@ -119,7 +119,7 @@ jobs:
       run: echo "storing artifacts for deployment"
 
   QualityAssessment-deployment:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: Packaging-artifacts
 
     steps:
@@ -130,7 +130,7 @@ jobs:
       run: echo "Deploying to QA"
 
   staging-deployment:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: acceptance-tests
 
     steps:
@@ -141,7 +141,7 @@ jobs:
       run: echo "Deploying to Staging"
 
   production-deployment:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: staging-deployment
 
     steps:
